[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/temita.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/Kurland_Font_0_22/Kurland.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://coloring/base/HUD_OVERLAY.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD_OVERLAY" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( 501, 115 )

[node name="LevelNumber" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 53.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Nivel N"
align = 1

[node name="ToColor" type="Label" parent="."]
margin_left = 33.0
margin_top = 62.0
margin_right = 343.0
margin_bottom = 115.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Por colorear: X"

[node name="ColorsUsed" type="Label" parent="."]
margin_left = 30.0
margin_top = 111.0
margin_right = 362.0
margin_bottom = 164.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Colores usados: 0/Y"

[node name="Errors" type="Label" parent="."]
margin_left = 31.0
margin_top = 158.0
margin_right = 369.0
margin_bottom = 211.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Errores: 0"

[node name="MenuButton" type="Button" parent="."]
anchor_left = 0.783
anchor_top = 0.037
anchor_right = 0.971
anchor_bottom = 0.104
margin_left = -81.76
margin_top = -1.96
margin_right = -73.1201
margin_bottom = 1.68
focus_mode = 0
theme = ExtResource( 1 )
action_mode = 0
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Men√∫"

[node name="NextLevelButton" type="Button" parent="."]
anchor_left = 0.732
anchor_top = 0.035
anchor_right = 0.932
anchor_bottom = 0.104
margin_left = 30.96
margin_top = 90.2
margin_right = 41.96
margin_bottom = 89.68
focus_mode = 0
theme = ExtResource( 1 )
action_mode = 0
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Siguiente"

[node name="LastLevelButton" type="Button" parent="."]
anchor_left = 0.666
anchor_top = 0.035
anchor_right = 0.855
anchor_bottom = 0.101
margin_left = -95.52
margin_top = 92.2
margin_right = -76.6
margin_bottom = 94.92
focus_mode = 0
theme = ExtResource( 1 )
action_mode = 0
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Anterior"
